Fix selection highlight color to contrast with code block background

--- a/obsidian.css
+++ b/obsidian.css
@@ -21,7 +21,7 @@ body.theme-dark {
 
   --background-accent: #b5aa29;
   --text-highlight-bg: #b5aa29;
-  --text-selection: rgba(44, 86, 64, 0.99);
+  --text-selection: rgba(162, 50, 39, 0.6);
 
   --interactive-normal: #f2f3f5;
   --interactive-hover: #e9e9e9;
